--- a/Missouri Birder's Apprentice/Main.storyboard
+++ b/Missouri Birder's Apprentice/Main.storyboard
@@ -17,14 +17,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OQx-E3-bKH">
-                                <rect key="frame" x="128" y="259" width="119" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Update Sightings"/>
-                                <connections>
-                                    <action selector="updateSightings:" destination="iSG-59-chE" eventType="touchUpInside" id="nbb-0g-nYp"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hEl-VQ-twL">
                                 <rect key="frame" x="48" y="94" width="66" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -67,11 +59,24 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OQx-E3-bKH">
+                                <rect key="frame" x="128" y="249" width="119" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Update Sightings"/>
+                                <connections>
+                                    <action selector="updateSightings:" destination="iSG-59-chE" eventType="touchUpInside" id="nbb-0g-nYp"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9d8-E0-3Y1">
+                                <rect key="frame" x="16" y="296" width="343" height="351"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="2sH-vb-WDN"/>
                     </view>
                     <connections>
+                        <outlet property="birdPicIV" destination="9d8-E0-3Y1" id="Ifp-cb-leU"/>
                         <outlet property="dateLBL" destination="Bwy-4m-97v" id="qe6-eD-aIh"/>
                         <outlet property="locLBL" destination="21k-Bv-mqf" id="eIn-y8-w7q"/>
                         <outlet property="sightingsTF" destination="p2h-Ki-Bjf" id="dUM-3H-kGt"/>
