--- a/Missouri Birder's Apprentice/Main.storyboard
+++ b/Missouri Birder's Apprentice/Main.storyboard
@@ -18,15 +18,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="county_cell" id="Ppo-YX-VoO">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="county_cell" id="Ppo-YX-VoO">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ppo-YX-VoO" id="2Qy-5o-eVX">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="Oxk-zt-MHM" kind="show" id="OeV-s3-Xdd"/>
+                                    <segue destination="Oxk-zt-MHM" kind="show" identifier="counties_bird" id="gEV-96-NPq"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -39,7 +39,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hn4-3R-ViG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-490" y="-205"/>
+            <point key="canvasLocation" x="-914" y="-206"/>
         </scene>
         <!--Birds Table View Controller-->
         <scene sceneID="hmr-wD-gPN">
@@ -67,7 +67,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oPf-rX-prS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1290" y="533"/>
+            <point key="canvasLocation" x="-118" y="-206"/>
         </scene>
         <!--Add New Bird View Controller-->
         <scene sceneID="3eu-Sv-3hq">
@@ -159,7 +159,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dWb-9D-pob" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="276" y="532.98350824587715"/>
+            <point key="canvasLocation" x="-119" y="522"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jCk-CG-Dgt">
@@ -169,13 +169,16 @@
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="83r-nX-WkU">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="SbZ-7U-RNW" kind="relationship" relationship="rootViewController" id="Pvy-qy-Hc7"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kpR-nv-f2V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1289" y="-204"/>
+            <point key="canvasLocation" x="-1676" y="-206"/>
         </scene>
         <!--Add New County View Controller-->
         <scene sceneID="x2s-wW-f1j">
@@ -225,7 +228,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YSu-jV-Wss" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="276" y="-205.54722638680661"/>
+            <point key="canvasLocation" x="-1676" y="523"/>
         </scene>
         <!--Bird View Controller-->
         <scene sceneID="Kyt-yp-I8b">
@@ -303,7 +306,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v84-pZ-YQm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-490.39999999999998" y="532.98350824587715"/>
+            <point key="canvasLocation" x="-914" y="522"/>
         </scene>
     </scenes>
 </document>
